# advent-of-code-2021

1/: Cargo.toml  main.rs
2/: Cargo.toml  main.rs
3/: Cargo.toml  main.rs
4/: Cargo.toml  main.rs
5/: Cargo.toml  main.rs
6/: Cargo.toml  main.rs
7/: main.rs
advent/: Cargo.toml
advent/src/: lib.rs
