[package]
name = "solution"
version = "0.1.0"
authors = ["Dan Enman <enmand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
advent = { path = "../advent" }
ndarray = "0.15.4"
itertools = "0.10.1"

[[bin]]
name = "solution"
path = "main.rs"
